--- a/GraphicsProject/GraphicsProject.vcxproj
+++ b/GraphicsProject/GraphicsProject.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="ComponetTests.h" />
     <ClInclude Include="GraphicsProject.h" />
     <ClInclude Include="GraphicsProjectDlg.h" />
+    <ClInclude Include="ImageData.h" />
     <ClInclude Include="myBrushes.h" />
     <ClInclude Include="myStroke.h" />
     <ClInclude Include="painting.h" />
@@ -207,11 +208,11 @@
     <ClInclude Include="SLIC_superpixels.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="strokeProcess.h" />
+    <ClInclude Include="StrokeProcessState.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="vis.h" />
-    <ClInclude Include="z_imgproc.h" />
-    <ClInclude Include="z_Saliency.h" />
+    <ClInclude Include="computeSaliency.h" />
     <ClInclude Include="z_strokeSampling.h" />
   </ItemGroup>
   <ItemGroup>
@@ -219,6 +220,7 @@
     <ClCompile Include="ComponetTests.cpp" />
     <ClCompile Include="GraphicsProject.cpp" />
     <ClCompile Include="GraphicsProjectDlg.cpp" />
+    <ClCompile Include="ImageData.cpp" />
     <ClCompile Include="myBrushes.cpp" />
     <ClCompile Include="myStroke.cpp" />
     <ClCompile Include="painting.cpp" />
@@ -232,9 +234,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="strokeProcess.cpp" />
+    <ClCompile Include="StrokeProcessState.cpp" />
     <ClCompile Include="vis.cpp" />
-    <ClCompile Include="z_imgproc.cpp" />
-    <ClCompile Include="z_Saliency.cpp" />
+    <ClCompile Include="computeSaliency.cpp" />
     <ClCompile Include="z_strokeSampling.cpp" />
   </ItemGroup>
   <ItemGroup>
