new  working version. Bugs exist a lot but at least working!
TODO:
1. sample evenly

--- a/GraphicsProject/GraphicsProject.vcxproj
+++ b/GraphicsProject/GraphicsProject.vcxproj
@@ -235,6 +235,7 @@
     </ClCompile>
     <ClCompile Include="strokeProcess.cpp" />
     <ClCompile Include="StrokeProcessState.cpp" />
+    <ClCompile Include="utils.cpp" />
     <ClCompile Include="vis.cpp" />
     <ClCompile Include="computeSaliency.cpp" />
     <ClCompile Include="z_strokeSampling.cpp" />
